--- a/client/DonationWidget.html
+++ b/client/DonationWidget.html
@@ -1,10 +1,11 @@
 <form on:submit="handleSubmit(event)">
 	<div class="group">
 		<label>
-			<span>Amount</span>
+			<span>Amount (USD)</span>
 			<input
 				type="number"
 				class="field text-field"
+				data-is-empty="{{amountInput === ''}}"
 				placeholder="{{defaultAmount}}$"
 				bind:value="amountInput"
 				on:change="validateAmount(amountInput)"
@@ -14,7 +15,6 @@
 			<span>Monthly</span>
 			<input
 				type="radio"
-				class="field"
 				bind:group="frequency"
 				value="monthly"
 			>
@@ -23,16 +23,20 @@
 			<span>Once</span>
 			<input
 				type="radio"
-				class="field"
 				bind:group="frequency"
 				value="once"
 			>
 		</label>
 	</div>
-	<div class="group">
-		<button type="submit">
-			Donate {{currentDonationAmount}}$ {{frequency}}
-		</button>
+	<button type="submit">
+		Donate {{currentDonationAmount}}$ {{frequency}}
+	</button>
+	<div class="outcome">
+		{{#if errorMessage}}
+		<div class="error">
+			{{errorMessage}}
+		</div>
+		{{/if}}
 	</div>
 </form>
 
@@ -53,7 +57,8 @@ form {
 
 .group {
 	background: white;
-	box-shadow: 0 7px 14px 0 rgba(49,49,93,0.10), 0 3px 6px 0 rgba(0,0,0,0.08);
+	box-shadow: 0 7px 14px 0 rgba(49,49,93,0.10),
+	            0 3px 6px 0 rgba(0,0,0,0.08);
 	border-radius: 4px;
 	margin-bottom: 20px;
 }
@@ -68,60 +73,38 @@ label {
 	display: block;
 }
 
-.text-field {
-	cursor: text;
+.group label:not(:last-child) {
+	border-bottom: 1px solid #F0F5FA;
+}
+
+label > span {
+	width: 40%;
+	text-align: right;
+	float: left;
+}
+
+input {
+	padding-right: 10px;
+	padding-left: 10px;
+	width: 50%;
+	height: 40px;
+	float: right;
+	border: 0;
+	color: #31325F;
 }
 
 .field {
 	background: transparent;
 	font-weight: 300;
-	border: 0;
-	color: #31325F;
 	outline: none;
-	padding-right: 10px;
-	padding-left: 10px;
-	width: 70%;
-	height: 40px;
-	float: right;
+	cursor: text;
 }
 
 .field::-webkit-input-placeholder { color: #CFD7E0; }
 .field::-moz-placeholder { color: #CFD7E0; }
 .field:-ms-input-placeholder { color: #CFD7E0; }
 
-label .field.is-focused + span span,
-label .field:not(.is-empty) + span span {
-	transform: scale(0.68) translateY(-36px);
-	cursor: default;
-}
-
-label .field.is-focused + span {
-	border-bottom-color: #34D08C;
-}
-
-.field.is-empty:not(.is-focused) {
-	opacity: 0;
-}
-
-label {
-	position: relative;
-	color: #8898AA;
-	font-weight: 300;
-	height: 40px;
-	line-height: 40px;
-	margin-left: 20px;
-	display: block;
-}
-
-label > span {
-	width: 20%;
-	text-align: right;
-	float: left;
-}
-
 button {
-	cursor: pointer;
-
 	float: left;
 	display: block;
 	background: #666EE8;
@@ -145,6 +128,36 @@ button:focus {
 
 button:active {
 	background: #43458B;
+}
+
+.outcome {
+	float: left;
+	width: 100%;
+	padding-top: 8px;
+	min-height: 24px;
+	text-align: center;
+}
+
+.success, .error {
+	display: none;
+	font-size: 13px;
+}
+
+.success.visible, .error.visible {
+	display: inline;
+}
+
+.error {
+	color: #E4584C;
+}
+
+.success {
+	color: #666EE8;
+}
+
+.success .token {
+	font-weight: 500;
+	font-size: 13px;
 }
 
 </style>
@@ -185,14 +198,31 @@ export default {
 		handleSubmit(event) {
 			event.preventDefault()
 
-			const handler = this.get('handler')
-			const amount = this.get('currentDonationAmount')
+			const dollars = this.get('currentDonationAmount')
 
-			handler.open({
+			this.fire('openCheckout', {
 				name: 'Biblical Blueprints',
-				description: `${amount}$ donation`,
-				amount: amount * 100
+				description: `${dollars}$ donation`,
+				amount: dollars * 100,
+				dollars,
+				frequency: this.get('frequency')
 			})
+		},
+		handleError(error) {
+			this.set({
+				errorMessage: error.message || error.toString()
+			})
+		},
+		handleToken({ email, id, dollars, frequency }) {
+			this.fire('submitDonation', {
+				email,
+				token: id,
+				dollars,
+				frequency
+			})
+		},
+		handleDonationPostResponse(response) {
+			console.log('server responded with', response)
 		}
 	}
 }
