--- a/server/index.html
+++ b/server/index.html
@@ -2,11 +2,7 @@
 <html>
 	<head>
 		<title>Stripe donation page</title>
-		<style>
-			body {
-				background-color: #faf7ee;
-			}
-		</style>
+		<!-- style -->
 	</head>
 	<body>
 		<div id="target"></div>
