Make radio buttons look passable in Firefox/Safari

--- a/client/DonationWidget.html
+++ b/client/DonationWidget.html
@@ -98,6 +98,11 @@ input {
 	color: #31325F;
 }
 
+input[type=radio] {
+	height: 18px;
+	margin-top: 12px;
+}
+
 .field {
 	background: transparent;
 	font-weight: 300;
